--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # Ignore node_modules folder
 node_modules
-
 # Ignore Session data
 *.data.json
 
-
+# managed
+**.data.json
+**.node-persist**
+# end managed
