--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-gtts": "^2.0.2",
     "remove.bg": "^1.3.0",
     "request": "^2.88.2",
+    "snekfetch": "^4.0.4",
     "tiktok-scraper": "^1.3.4",
     "video-url-link": "^0.1.4"
   },
