--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "request": "^2.88.2",
     "snekfetch": "^4.0.4",
     "tiktok-scraper": "^1.3.4",
-    "video-url-link": "^0.1.4"
+    "video-url-link": "^0.1.4",
+    "weather-js": "^2.0.0"
   },
   "directories": {
     "lib": "lib"
